package fr.insee.survey.datacollectionmanagement.metadata.dto;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class OwnerDto {

    private String id;
    private String label;
    private String ministry;
    private String logo;

}
