@startuml

package Metadata {

  class Source{
    periodicity

  }

  class Owner{

  }

  class Support{

  }

  class Survey{
    year
  }

  class Campaign{
    period
  }

  class Partitionning{
    status
    calendar
  }

  class CampaignEvent {
    date
    type
  }
  CampaignEvent "0..*" -- "1" Campaign

}

Owner "1" -- "0..*" Source
Support "1" -- "0..*" Source
Source "1" -- "0..*" Survey
Survey "1" -- "0..*" Campaign
Campaign "1" -- "0..*" Partitionning

package PiComm {
  ' TODO

}


package Questionning {
  class SurveyUnit{

  }

  class Questionning{
    model
  }

  class QuestionningAccreditation{
    isMain
  }

  class OperatorService{

  }

  class Operator{

  }

  QuestionningAccreditation "0..*" -- "1" Questionning
  Questionning "0..*" -- "1" SurveyUnit
  Partitionning "1" .. "0..*" Questionning
  OperatorService "1" -- "0..*" Questionning
  Operator "0..*" -- "1" OperatorService

  class QuestionningEvent {
    date
    type
  }
  QuestionningEvent "0..*" -- "1" Questionning



}


package Contact {

  class Contact{

  }

  class Address{

  }
  Contact "0..1" -- "0..1" Address
  Contact "0..1" .. "0..*" QuestionningAccreditation

  class ContactEvent {
    date
    type
  }
  ContactEvent "0..*" -- "1" Contact
}



package User {

  class User{
    role
  }

  class UserEvent{
    date
    type
  }

  SourceAccreditation "0..1" -- "0..*" User
  Source "0..1" .. "0..*" SourceAccreditation
  UserEvent "0..*" -- "1" User

}

package View {

  class Source{
    periodicity

  }

  class View{
}
View "0..*" .. "0..1" Contact
View "0..*" .. "0..1" SurveyUnit
View "0..*" .. "0..1" Campaign
}



package Reporting {



}

package Admin{

  class Message{

  }

  class Params{

  }

  Campaign "0..*" .. "0..1" Params


}

@enduml
